<resources>
    <string name="app_name">Travelookup</string>
    <string name="swap_button">Swap</string>
    <string name="search_button">Search</string>
    <string name="passenger_icon">Passenger</string>
    <string name="child_icon">Child</string>
    <string name="pet_icon">Pet</string>
    <string name="luggage_icon">Luggage</string>
    <string name="plane_icon">Plane</string>
    <string name="train_icon">Train</string>
    <string name="bus_icon">Bus</string>
    <string name="ship_icon">Ship</string>
    <string name="trip_icon">Trip</string>
    <string name="hotel_icon">Hotel</string>
    <string name="transport_icon">Transport</string>
    <string name="event_icon">Event</string>
    <string name="get_started">Get Started</string>

</resources>