<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="Explore the beautiful world!"
            style="@style/DefaultTitle" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp">

            <EditText
                android:id="@+id/search_bar"
                android:layout_width="343dp"
                android:layout_height="48dp"
                android:layout_marginTop="8dp"
                android:layout_gravity="center_horizontal"
                android:hint="Search"
                android:padding="6dp"
                android:background="@drawable/search_background" />

            <ImageButton
                android:id="@+id/searchButton"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="?android:attr/selectableItemBackground"
                android:contentDescription="@string/search_button"
                android:scaleType="centerInside"
                android:layout_marginTop="8dp"
                android:layout_marginStart="320dp"
                android:src="@drawable/ic_search" />

        </RelativeLayout>

        <!-- Booking Services -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Booking Services"
            android:layout_marginTop="36dp"
            style="@style/DefaultSubtitle" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:padding="8dp">

            <ImageButton
                android:id="@+id/trip_booking"
                android:layout_width="60dp"
                android:layout_height="82dp"
                android:src="@drawable/ic_trip"
                android:contentDescription="@string/trip_icon"
                android:background="?android:attr/selectableItemBackground"
                android:scaleType="centerInside"
                android:layout_margin="8dp" />

            <ImageButton
                android:id="@+id/hotel_booking"
                android:layout_width="60dp"
                android:layout_height="82dp"
                android:src="@drawable/ic_hotel"
                android:contentDescription="@string/hotel_icon"
                android:background="?android:attr/selectableItemBackground"
                android:scaleType="centerInside"
                android:layout_margin="8dp" />

            <ImageButton
                android:id="@+id/transport_booking"
                android:layout_width="60dp"
                android:layout_height="82dp"
                android:src="@drawable/ic_transport"
                android:contentDescription="@string/transport_icon"
                android:background="?android:attr/selectableItemBackground"
                android:scaleType="centerInside"
                android:layout_margin="8dp" />

            <ImageButton
                android:id="@+id/event_booking"
                android:layout_width="60dp"
                android:layout_height="82dp"
                android:src="@drawable/ic_event"
                android:contentDescription="@string/event_icon"
                android:background="?android:attr/selectableItemBackground"
                android:scaleType="centerInside"
                android:layout_margin="8dp" />
        </LinearLayout>
    </LinearLayout>
</FrameLayout>