<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Transport Booking"
            style="@style/DefaultTitle"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="16dp" />

        <!-- From and To Fields -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp">

            <!-- From Text -->
            <TextView
                android:id="@+id/fromText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="From"
                style="@style/DefaultSubtitle" />

            <!-- From Location -->
            <TextView
                android:id="@+id/fromLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/fromText"
                android:hint="New York (NYC)"
                android:textSize="18sp"
                android:layout_marginTop="8dp" />

            <!-- To Text -->
            <TextView
                android:id="@+id/toText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/fromLocation"
                android:layout_marginTop="16dp"
                android:text="To"
                style="@style/DefaultSubtitle" />

            <!-- To Location -->
            <TextView
                android:id="@+id/toLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/toText"
                android:hint="London (LDN)"
                android:textSize="18sp"
                android:layout_marginTop="8dp" />

            <!-- Swap Button -->
            <ImageButton
                android:id="@+id/swapButton"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:background="?android:attr/selectableItemBackground"
                android:src="@drawable/ic_swap"
                android:scaleType="centerInside"
                android:contentDescription="@string/swap_button" />

        </RelativeLayout>


        <!-- Departure and Return Dates -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2"
            android:padding="8dp">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Departure"
                    style="@style/DefaultSubtitle"
                    android:textStyle="bold" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Jun 02, 2022" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_marginStart="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Return"
                    style="@style/DefaultSubtitle"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Jun 12, 2022" />
            </LinearLayout>
        </LinearLayout>

        <!-- Passenger and Luggage -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Passenger and Luggage"
            android:layout_marginStart="8dp"
            style="@style/DefaultSubtitle" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_person"
                android:contentDescription="@string/passenger_icon"
                android:layout_marginEnd="8dp" />

            <EditText
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:hint="1" />

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_child"
                android:contentDescription="@string/child_icon"
                android:layout_marginStart="48dp"
                android:layout_marginEnd="8dp" />

            <EditText
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:hint="1" />

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_pet"
                android:contentDescription="@string/pet_icon"
                android:layout_marginStart="48dp"
                android:layout_marginEnd="8dp" />

            <EditText
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:hint="1" />

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_luggage"
                android:contentDescription="@string/luggage_icon"
                android:layout_marginStart="48dp"
                android:layout_marginEnd="8dp" />

            <EditText
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:hint="1" />
        </LinearLayout>

        <!-- Class Selection -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Class"
            android:layout_marginStart="8dp"
            style="@style/DefaultSubtitle"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp">

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:text="Economy" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Business"
                    android:layout_marginStart="144dp" />
            </RadioGroup>
        </LinearLayout>

        <!-- Transport Selection -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Transport"
            android:layout_marginStart="8dp"
            style="@style/DefaultSubtitle" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:padding="8dp">

            <ImageButton
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:src="@drawable/ic_plane"
                android:contentDescription="@string/plane_icon"
                android:background="?android:attr/selectableItemBackground"
                android:scaleType="centerInside"
                android:layout_margin="8dp" />

            <ImageButton
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:src="@drawable/ic_ship"
                android:contentDescription="@string/ship_icon"
                android:background="?android:attr/selectableItemBackground"
                android:scaleType="centerInside"
                android:layout_margin="8dp" />

            <ImageButton
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:src="@drawable/ic_train"
                android:contentDescription="@string/train_icon"
                android:background="?android:attr/selectableItemBackground"
                android:scaleType="centerInside"
                android:layout_margin="8dp" />

            <ImageButton
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:src="@drawable/ic_bus"
                android:contentDescription="@string/bus_icon"
                android:background="?android:attr/selectableItemBackground"
                android:scaleType="centerInside"
                android:layout_margin="8dp" />
        </LinearLayout>

        <!-- Search Button -->
        <Button
            android:layout_width="343dp"
            android:layout_height="60dp"
            android:layout_gravity="center_horizontal"
            android:text="Search"
            style="@style/DefaultSubmitButton" />
    </LinearLayout>


</ScrollView>


